--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -26,8 +26,13 @@ android {
     namespace "css.cis3334.cis3334_project2_briston"
     compileSdkVersion flutter.compileSdkVersion
     ndkVersion flutter.ndkVersion
+    //TOM
+    compileSdk 33
 
     compileOptions {
+        // Flag to enable support for the new language APIs
+        coreLibraryDesugaringEnabled true
+        // Sets Java compatibility to Java 8
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -49,6 +54,8 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        //  TOM
+        multiDexEnabled true
     }
 
     buildTypes {
@@ -64,4 +71,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+}
